crates/gridwell-writer-ansi/tests/snapshots/snapshots__single-column.snap
---
source: crates/gridwell-writer-ansi/tests/snapshots.rs
expression: out
---
┌────────────┐
│[1m Item       [0m│
├────────────┤
│ First      │
│ Second     │
│ Third      │
└────────────┘
