crates/gridwell-writer-ansi/tests/snapshots/snapshots__single-row.snap
---
source: crates/gridwell-writer-ansi/tests/snapshots.rs
expression: out
---
┌────────────┬────────────┬────────────┬────────────┐
│[1m W          [0m│[1m X          [0m│[1m Y          [0m│[1m Z          [0m│
├────────────┼────────────┼────────────┼────────────┤
│ 1          │ 2          │ 3          │ 4          │
└────────────┴────────────┴────────────┴────────────┘
