crates/gridwell-writer-ansi/tests/snapshots/snapshots__snapshot_comprehensive_reference.snap
---
source: crates/gridwell-writer-ansi/tests/snapshots.rs
expression: "render(\"comprehensive/reference_table.json\")"
---
[1mRegional Sales Performance[0m
Fiscal years 2023–2024 (in millions USD)
┌───────────────┬────────────┬────────────┬────────────┬────────────┐
│[1m               [0m│[1m            [0m│[1m              Financials              [0m│
│[1m    Country    [0m│[1m    Year    [0m│[1m  Revenue   [0m│[1m  Expenses  [0m│[1m   Profit   [0m│
├───────────────┼────────────┼────────────┼────────────┼────────────┤
│[1m North America                                                     [0m│
├───────────────┼────────────┼────────────┼────────────┼────────────┤
│[38;2;51;51;51m United States [0m│[38;2;51;51;51m    2023    [0m│[38;2;51;51;51m  1,250.3   [0m│[38;2;51;51;51m   980.2    [0m│[1m[38;2;51;51;51m   270.1    [0m│
│[38;2;51;51;51m    2024    [0m│[38;2;51;51;51m  1,380.7   [0m│[38;2;51;51;51m  1,050.41  [0m│[1m[38;2;51;51;51m   330.3    [0m│
│[38;2;51;51;51m    Canada     [0m│[38;2;51;51;51m    2024    [0m│[38;2;51;51;51m   420.1    [0m│[38;2;51;51;51m   310.6    [0m│[1m[38;2;51;51;51m   109.5    [0m│
├───────────────┼────────────┼────────────┼────────────┼────────────┤
│[1m     Total     [0m│[1m     —      [0m│[1m  3,051.1   [0m│[1m  2,341.2   [0m│[1m   709.9    [0m│
├───────────────┼────────────┼────────────┼────────────┼────────────┤
│[1m Europe                                                            [0m│
├───────────────┼────────────┼────────────┼────────────┼────────────┤
│[38;2;51;51;51m    Germany    [0m│[38;2;51;51;51m    2023    [0m│[38;2;51;51;51m   890.5    [0m│[38;2;51;51;51m   720.1    [0m│[1m[38;2;51;51;51m   170.4    [0m│
│[38;2;51;51;51m    2024    [0m│[38;2;51;51;51m   945.2    [0m│[38;2;51;51;51m   780.3    [0m│[1m[38;2;51;51;51m   164.9    [0m│
│[38;2;51;51;51m    France     [0m│[38;2;51;51;51m    2024    [0m│[38;2;51;51;51m   610.8    [0m│[38;2;51;51;51m   490.2    [0m│[1m[38;2;51;51;51m   120.6    [0m│
├───────────────┼────────────┼────────────┼────────────┼────────────┤
│[1m     Total     [0m│[1m     —      [0m│[1m  2,446.5   [0m│[1m  1,990.6   [0m│[1m   455.9    [0m│
└───────────────┴────────────┴────────────┴────────────┴────────────┘
  1 Includes one-time restructuring charge.
  Source: Internal finance database, June 2025.
