crates/gridwell-writer-ansi/tests/snapshots/snapshots__snapshot_content_rich.snap
---
source: crates/gridwell-writer-ansi/tests/snapshots.rs
expression: "render(\"minimal/content_rich.json\")"
---
┌──────────────┬───────────────────────────────────────────┐
│[1m    Label     [0m│[1m                  Content                  [0m│
├──────────────┼───────────────────────────────────────────┤
│ Rich content │ Normal text, bold text second line with * │
│  Image cell  │             Trend: sparkline              │
└──────────────┴───────────────────────────────────────────┘
  * Estimated value.
