crates/gridwell-writer-ansi/tests/snapshots/snapshots__snapshot_footnote_single.snap
---
source: crates/gridwell-writer-ansi/tests/snapshots.rs
expression: "render(\"minimal/footnote_single.json\")"
---
┌────────────┬────────────┐
│[1m    Item    [0m│[1m   Price    [0m│
├────────────┼────────────┤
│   Widget   │   $9.991   │
│   Gadget   │   $19.99   │
└────────────┴────────────┘
  1 Price valid through end of quarter.
